cmake_minimum_required(VERSION 3.1)
cmake_policy(SET CMP0110 OLD) ## for use [] in test names like "EzMath.double.Vec2.[]"

set(PROJECT EzMath_Test)
enable_language(C CXX)
project(${PROJECT} CXX)

message("EzMath testing enabled")

file(GLOB_RECURSE PROJECT_TEST_SRC_RECURSE 
	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp 
	${CMAKE_CURRENT_SOURCE_DIR}/*.h 
)

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${PROJECT_TEST_SRC_RECURSE})
include_directories(${EzMath_INCLUDE_DIR})
add_executable(${PROJECT} ${PROJECT_TEST_SRC_RECURSE})
target_link_libraries(${PROJECT} ${EzMath_LIBRARIES})
set_target_properties(${PROJECT} PROPERTIES FOLDER Tests)

function(AddTest arg)
  add_test("${arg}" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "${arg}")
endfunction()

AddTest("FileHelper.1")
AddTest("Logger.1")

### TESTS for EzMath.Vec2

AddTest("EzMath.double.Vec2.[]")
AddTest("EzMath.double.Vec2.Offset") #.double.Vec2.Offset")
AddTest("EzMath.double.Vec2.Set") #.double.Vec2.Set")
AddTest("EzMath.double.Vec2.-") #.double.Vec2.-")
AddTest("EzMath.double.Vec2.post++") #.double.Vec2.post++")
AddTest("EzMath.double.Vec2.post--") #.double.Vec2.post--")
AddTest("EzMath.double.Vec2.pre++") #.double.Vec2.pre++")
AddTest("EzMath.double.Vec2.pre--") #.double.Vec2.pre--")
AddTest("EzMath.double.Vec2.+=a") #.double.Vec2.+=a")
AddTest("EzMath.double.Vec2.+=Vec2") #.double.Vec2.+=Vec2")
AddTest("EzMath.double.Vec2.-=a") #.double.Vec2.-=a")
AddTest("EzMath.double.Vec2.-=Vec2") #.double.Vec2.-=Vec2")
AddTest("EzMath.double.Vec2.==a") #.double.Vec2.==a")
AddTest("EzMath.double.Vec2.==Vec2") #.double.Vec2.==Vec2")
AddTest("EzMath.double.Vec2.!=a") #.double.Vec2.!=a")
AddTest("EzMath.double.Vec2.!=Vec2") #.double.Vec2.!=Vec2")
AddTest("EzMath.double.Vec2.*=a") #.double.Vec2.*=a")
AddTest("EzMath.double.Vec2.*=Vec2") #.double.Vec2.*=Vec2")
AddTest("EzMath.double.Vec2./=a") #.double.Vec2./=a")
AddTest("EzMath.double.Vec2./=Vec2") #.double.Vec2./=Vec2")
AddTest("EzMath.double.Vec2.lengthSquared") #.double.Vec2.lengthSquared")
AddTest("EzMath.double.Vec2.length") #.double.Vec2.length")
AddTest("EzMath.double.Vec2.normalize") #.double.Vec2.normalize")
AddTest("EzMath.double.Vec2.GetNormalized") #.double.Vec2.GetNormalized")
AddTest("EzMath.double.Vec2.sum") #.double.Vec2.sum")
AddTest("EzMath.double.Vec2.sumAbs") #.double.Vec2.sumAbs")
AddTest("EzMath.double.Vec2.emptyAND") #.double.Vec2.emptyAND")
AddTest("EzMath.double.Vec2.emptyOR") #.double.Vec2.emptyOR")
AddTest("EzMath.double.Vec2.string") #.double.Vec2.string")
AddTest("EzMath.double.Vec2.ratioXY") #.double.Vec2.ratioXY")
AddTest("EzMath.double.Vec2.ratioYX") #.double.Vec2.ratioYX")
AddTest("EzMath.double.Vec2.mini") #.double.Vec2.mini")
AddTest("EzMath.double.Vec2.maxi") #.double.Vec2.maxi")

AddTest("EzMath.float.Vec2.[]") #.float.Vec2.[]")
AddTest("EzMath.float.Vec2.Offset") #.float.Vec2.Offset")
AddTest("EzMath.float.Vec2.Set") #.float.Vec2.Set")
AddTest("EzMath.float.Vec2.-") #.float.Vec2.-")
AddTest("EzMath.float.Vec2.post++") #.float.Vec2.post++")
AddTest("EzMath.float.Vec2.post--") #.float.Vec2.post--")
AddTest("EzMath.float.Vec2.pre++") #.float.Vec2.pre++")
AddTest("EzMath.float.Vec2.pre--") #.float.Vec2.pre--")
AddTest("EzMath.float.Vec2.+=a") #.float.Vec2.+=a")
AddTest("EzMath.float.Vec2.+=Vec2") #.float.Vec2.+=Vec2")
AddTest("EzMath.float.Vec2.-=a") #.float.Vec2.-=a")
AddTest("EzMath.float.Vec2.-=Vec2") #.float.Vec2.-=Vec2")
AddTest("EzMath.float.Vec2.==a") #.float.Vec2.==a")
AddTest("EzMath.float.Vec2.==Vec2") #.float.Vec2.==Vec2")
AddTest("EzMath.float.Vec2.!=a") #.float.Vec2.!=a")
AddTest("EzMath.float.Vec2.!=Vec2") #.float.Vec2.!=Vec2")
AddTest("EzMath.float.Vec2.*=a") #.float.Vec2.*=a")
AddTest("EzMath.float.Vec2.*=Vec2") #.float.Vec2.*=Vec2")
AddTest("EzMath.float.Vec2./=a") #.float.Vec2./=a")
AddTest("EzMath.float.Vec2./=Vec2") #.float.Vec2./=Vec2")
AddTest("EzMath.float.Vec2.lengthSquared") #.float.Vec2.lengthSquared")
AddTest("EzMath.float.Vec2.length") #.float.Vec2.length")
AddTest("EzMath.float.Vec2.normalize") #.float.Vec2.normalize")
AddTest("EzMath.float.Vec2.GetNormalized") #.float.Vec2.GetNormalized")
AddTest("EzMath.float.Vec2.sum") #.float.Vec2.sum")
AddTest("EzMath.float.Vec2.sumAbs") #.float.Vec2.sumAbs")
AddTest("EzMath.float.Vec2.emptyAND") #.float.Vec2.emptyAND")
AddTest("EzMath.float.Vec2.emptyOR") #.float.Vec2.emptyOR")
AddTest("EzMath.float.Vec2.string") #.float.Vec2.string")
AddTest("EzMath.float.Vec2.ratioXY") #.float.Vec2.ratioXY")
AddTest("EzMath.float.Vec2.ratioYX") #.float.Vec2.ratioYX")
AddTest("EzMath.float.Vec2.mini") #.float.Vec2.mini")
AddTest("EzMath.float.Vec2.maxi") #.float.Vec2.maxi")

AddTest("EzMath.bool.Vec2.[]") #.bool.Vec2.[]")
AddTest("EzMath.bool.Vec2.Set") #.bool.Vec2.Set")
AddTest("EzMath.bool.Vec2.!") #.bool.Vec2.!")
AddTest("EzMath.bool.Vec2.==a") #.bool.Vec2.==a")
AddTest("EzMath.bool.Vec2.==Vec2") #.bool.Vec2.==Vec2")
AddTest("EzMath.bool.Vec2.!=a") #.bool.Vec2.!=a")
AddTest("EzMath.bool.Vec2.!=Vec2") #.bool.Vec2.!=Vec2")
AddTest("EzMath.bool.Vec2.emptyAND") #.bool.Vec2.emptyAND")
AddTest("EzMath.bool.Vec2.emptyOR") #.bool.Vec2.emptyOR")
AddTest("EzMath.bool.Vec2.string") #.bool.Vec2.string")
AddTest("EzMath.bool.Vec2.mini") #.bool.Vec2.mini")
AddTest("EzMath.bool.Vec2.maxi") #.bool.Vec2.maxi")

AddTest("EzMath.int.Vec2.[]") #.int.Vec2.[]")
AddTest("EzMath.int.Vec2.Offset") #.int.Vec2.Offset")
AddTest("EzMath.int.Vec2.Set") #.int.Vec2.Set")
AddTest("EzMath.int.Vec2.-") #.int.Vec2.-")
AddTest("EzMath.int.Vec2.post++") #.int.Vec2.post++")
AddTest("EzMath.int.Vec2.post--") #.int.Vec2.post--")
AddTest("EzMath.int.Vec2.pre++") #.int.Vec2.pre++")
AddTest("EzMath.int.Vec2.pre--") #.int.Vec2.pre--")
AddTest("EzMath.int.Vec2.+=a") #.int.Vec2.+=a")
AddTest("EzMath.int.Vec2.+=Vec2") #.int.Vec2.+=Vec2")
AddTest("EzMath.int.Vec2.-=a") #.int.Vec2.-=a")
AddTest("EzMath.int.Vec2.-=Vec2") #.int.Vec2.-=Vec2")
AddTest("EzMath.int.Vec2.==a") #.int.Vec2.==a")
AddTest("EzMath.int.Vec2.==Vec2") #.int.Vec2.==Vec2")
AddTest("EzMath.int.Vec2.!=a") #.int.Vec2.!=a")
AddTest("EzMath.int.Vec2.!=Vec2") #.int.Vec2.!=Vec2")
AddTest("EzMath.int.Vec2.*=a") #.int.Vec2.*=a")
AddTest("EzMath.int.Vec2.*=Vec2") #.int.Vec2.*=Vec2")
AddTest("EzMath.int.Vec2./=a") #.int.Vec2./=a")
AddTest("EzMath.int.Vec2./=Vec2") #.int.Vec2./=Vec2")
AddTest("EzMath.int.Vec2.sum") #.int.Vec2.sum")
AddTest("EzMath.int.Vec2.sumAbs") #.int.Vec2.sumAbs")
AddTest("EzMath.int.Vec2.emptyAND") #.int.Vec2.emptyAND")
AddTest("EzMath.int.Vec2.emptyOR") #.int.Vec2.emptyOR")
AddTest("EzMath.int.Vec2.string") #.int.Vec2.string")
AddTest("EzMath.int.Vec2.mini") #.int.Vec2.mini")
AddTest("EzMath.int.Vec2.maxi") #.int.Vec2.maxi")

AddTest("EzMath.uint.Vec2.[]") #.uint.Vec2.[]")
AddTest("EzMath.uint.Vec2.Offset") #.uint.Vec2.Offset")
AddTest("EzMath.uint.Vec2.Set") #.uint.Vec2.Set")
AddTest("EzMath.uint.Vec2.post++") #.uint.Vec2.post++")
AddTest("EzMath.uint.Vec2.post--") #.uint.Vec2.post--")
AddTest("EzMath.uint.Vec2.pre++") #.uint.Vec2.pre++")
AddTest("EzMath.uint.Vec2.pre--") #.uint.Vec2.pre--")
AddTest("EzMath.uint.Vec2.+=a") #.uint.Vec2.+=a")
AddTest("EzMath.uint.Vec2.+=Vec2") #.uint.Vec2.+=Vec2")
AddTest("EzMath.uint.Vec2.-=a") #.uint.Vec2.-=a")
AddTest("EzMath.uint.Vec2.-=Vec2") #.uint.Vec2.-=Vec2")
AddTest("EzMath.uint.Vec2.==a") #.uint.Vec2.==a")
AddTest("EzMath.uint.Vec2.==Vec2") #.uint.Vec2.==Vec2")
AddTest("EzMath.uint.Vec2.!=a") #.uint.Vec2.!=a")
AddTest("EzMath.uint.Vec2.!=Vec2") #.uint.Vec2.!=Vec2")
AddTest("EzMath.uint.Vec2.*=a") #.uint.Vec2.*=a")
AddTest("EzMath.uint.Vec2.*=Vec2") #.uint.Vec2.*=Vec2")
AddTest("EzMath.uint.Vec2./=a") #.uint.Vec2./=a")
AddTest("EzMath.uint.Vec2./=Vec2") #.uint.Vec2./=Vec2")
AddTest("EzMath.uint.Vec2.sum") #.uint.Vec2.sum")
AddTest("EzMath.uint.Vec2.emptyAND") #.uint.Vec2.emptyAND")
AddTest("EzMath.uint.Vec2.emptyOR") #.uint.Vec2.emptyOR")
AddTest("EzMath.uint.Vec2.string") #.uint.Vec2.string")
AddTest("EzMath.uint.Vec2.mini") #.uint.Vec2.mini")
AddTest("EzMath.uint.Vec2.maxi") #.uint.Vec2.maxi")

### TESTS for EzMath.Vec3

AddTest("EzMath.double.Vec3.[]") #.double.Vec3.[]")
AddTest("EzMath.double.Vec3.Offset") #.double.Vec3.Offset")
AddTest("EzMath.double.Vec3.Set") #.double.Vec3.Set")
AddTest("EzMath.double.Vec3.-") #.double.Vec3.-")
AddTest("EzMath.double.Vec3.xy") #.double.Vec3.xy")
AddTest("EzMath.double.Vec3.xz") #.double.Vec3.xz")
AddTest("EzMath.double.Vec3.yz") #.double.Vec3.yz")
AddTest("EzMath.double.Vec3.yzx") #.double.Vec3.yzx")
AddTest("EzMath.double.Vec3.post++") #.double.Vec3.post++")
AddTest("EzMath.double.Vec3.post--") #.double.Vec3.post--")
AddTest("EzMath.double.Vec3.pre++") #.double.Vec3.pre++")
AddTest("EzMath.double.Vec3.pre--") #.double.Vec3.pre--")
AddTest("EzMath.double.Vec3.+=a") #.double.Vec3.+=a")
AddTest("EzMath.double.Vec3.+=Vec3") #.double.Vec3.+=Vec3")
AddTest("EzMath.double.Vec3.-=a") #.double.Vec3.-=a")
AddTest("EzMath.double.Vec3.-=Vec3") #.double.Vec3.-=Vec3")
AddTest("EzMath.double.Vec3.==a") #.double.Vec3.==a")
AddTest("EzMath.double.Vec3.==Vec3") #.double.Vec3.==Vec3")
AddTest("EzMath.double.Vec3.!=a") #.double.Vec3.!=a")
AddTest("EzMath.double.Vec3.!=Vec3") #.double.Vec3.!=Vec3")
AddTest("EzMath.double.Vec3.*=a") #.double.Vec3.*=a")
AddTest("EzMath.double.Vec3.*=Vec3") #.double.Vec3.*=Vec3")
AddTest("EzMath.double.Vec3./=a") #.double.Vec3./=a")
AddTest("EzMath.double.Vec3./=Vec3") #.double.Vec3./=Vec3")
AddTest("EzMath.double.Vec3.lengthSquared") #.double.Vec3.lengthSquared")
AddTest("EzMath.double.Vec3.length") #.double.Vec3.length")
AddTest("EzMath.double.Vec3.normalize") #.double.Vec3.normalize")
AddTest("EzMath.double.Vec3.GetNormalized") #.double.Vec3.GetNormalized")
AddTest("EzMath.double.Vec3.sum") #.double.Vec3.sum")
AddTest("EzMath.double.Vec3.sumAbs") #.double.Vec3.sumAbs")
AddTest("EzMath.double.Vec3.emptyAND") #.double.Vec3.emptyAND")
AddTest("EzMath.double.Vec3.emptyOR") #.double.Vec3.emptyOR")
AddTest("EzMath.double.Vec3.string") #.double.Vec3.string")
AddTest("EzMath.double.Vec3.mini") #.double.Vec3.mini")
AddTest("EzMath.double.Vec3.maxi") #.double.Vec3.maxi")

AddTest("EzMath.float.Vec3.[]") #.float.Vec3.[]")
AddTest("EzMath.float.Vec3.Offset") #.float.Vec3.Offset")
AddTest("EzMath.float.Vec3.Set") #.float.Vec3.Set")
AddTest("EzMath.float.Vec3.-") #.float.Vec3.-")
AddTest("EzMath.float.Vec3.xy") #.float.Vec3.xy")
AddTest("EzMath.float.Vec3.xz") #.float.Vec3.xz")
AddTest("EzMath.float.Vec3.yz") #.float.Vec3.yz")
AddTest("EzMath.float.Vec3.yzx") #.float.Vec3.yzx")
AddTest("EzMath.float.Vec3.post++") #.float.Vec3.post++")
AddTest("EzMath.float.Vec3.post--") #.float.Vec3.post--")
AddTest("EzMath.float.Vec3.pre++") #.float.Vec3.pre++")
AddTest("EzMath.float.Vec3.pre--") #.float.Vec3.pre--")
AddTest("EzMath.float.Vec3.+=a") #.float.Vec3.+=a")
AddTest("EzMath.float.Vec3.+=Vec3") #.float.Vec3.+=Vec3")
AddTest("EzMath.float.Vec3.-=a") #.float.Vec3.-=a")
AddTest("EzMath.float.Vec3.-=Vec3") #.float.Vec3.-=Vec3")
AddTest("EzMath.float.Vec3.==a") #.float.Vec3.==a")
AddTest("EzMath.float.Vec3.==Vec3") #.float.Vec3.==Vec3")
AddTest("EzMath.float.Vec3.!=a") #.float.Vec3.!=a")
AddTest("EzMath.float.Vec3.!=Vec3") #.float.Vec3.!=Vec3")
AddTest("EzMath.float.Vec3.*=a") #.float.Vec3.*=a")
AddTest("EzMath.float.Vec3.*=Vec3") #.float.Vec3.*=Vec3")
AddTest("EzMath.float.Vec3./=a") #.float.Vec3./=a")
AddTest("EzMath.float.Vec3./=Vec3") #.float.Vec3./=Vec3")
AddTest("EzMath.float.Vec3.lengthSquared") #.float.Vec3.lengthSquared")
AddTest("EzMath.float.Vec3.length") #.float.Vec3.length")
AddTest("EzMath.float.Vec3.normalize") #.float.Vec3.normalize")
AddTest("EzMath.float.Vec3.GetNormalized") #.float.Vec3.GetNormalized")
AddTest("EzMath.float.Vec3.sum") #.float.Vec3.sum")
AddTest("EzMath.float.Vec3.sumAbs") #.float.Vec3.sumAbs")
AddTest("EzMath.float.Vec3.emptyAND") #.float.Vec3.emptyAND")
AddTest("EzMath.float.Vec3.emptyOR") #.float.Vec3.emptyOR")
AddTest("EzMath.float.Vec3.string") #.float.Vec3.string")
AddTest("EzMath.float.Vec3.mini") #.float.Vec3.mini")
AddTest("EzMath.float.Vec3.maxi") #.float.Vec3.maxi")

AddTest("EzMath.bool.Vec3.[]") #.bool.Vec3.[]")
AddTest("EzMath.bool.Vec3.Set") #.bool.Vec3.Set")
AddTest("EzMath.bool.Vec3.!") #.bool.Vec3.!")
AddTest("EzMath.bool.Vec3.xy") #.bool.Vec3.xy")
AddTest("EzMath.bool.Vec3.xz") #.bool.Vec3.xz")
AddTest("EzMath.bool.Vec3.yz") #.bool.Vec3.yz")
AddTest("EzMath.bool.Vec3.yzx") #.bool.Vec3.yzx")
AddTest("EzMath.bool.Vec3.==a") #.bool.Vec3.==a")
AddTest("EzMath.bool.Vec3.==Vec3") #.bool.Vec3.==Vec3")
AddTest("EzMath.bool.Vec3.!=a") #.bool.Vec3.!=a")
AddTest("EzMath.bool.Vec3.!=Vec3") #.bool.Vec3.!=Vec3")
AddTest("EzMath.bool.Vec3.emptyAND") #.bool.Vec3.emptyAND")
AddTest("EzMath.bool.Vec3.emptyOR") #.bool.Vec3.emptyOR")
AddTest("EzMath.bool.Vec3.string") #.bool.Vec3.string")
AddTest("EzMath.bool.Vec3.mini") #.bool.Vec3.mini")
AddTest("EzMath.bool.Vec3.maxi") #.bool.Vec3.maxi")

AddTest("EzMath.int.Vec3.[]") #.int.Vec3.[]")
AddTest("EzMath.int.Vec3.Offset") #.int.Vec3.Offset")
AddTest("EzMath.int.Vec3.Set") #.int.Vec3.Set")
AddTest("EzMath.int.Vec3.-") #.int.Vec3.-")
AddTest("EzMath.int.Vec3.xy") #.int.Vec3.xy")
AddTest("EzMath.int.Vec3.xz") #.int.Vec3.xz")
AddTest("EzMath.int.Vec3.yz") #.int.Vec3.yz")
AddTest("EzMath.int.Vec3.yzx") #.int.Vec3.yzx")
AddTest("EzMath.int.Vec3.post++") #.int.Vec3.post++")
AddTest("EzMath.int.Vec3.post--") #.int.Vec3.post--")
AddTest("EzMath.int.Vec3.pre++") #.int.Vec3.pre++")
AddTest("EzMath.int.Vec3.pre--") #.int.Vec3.pre--")
AddTest("EzMath.int.Vec3.+=a") #.int.Vec3.+=a")
AddTest("EzMath.int.Vec3.+=Vec3") #.int.Vec3.+=Vec3")
AddTest("EzMath.int.Vec3.-=a") #.int.Vec3.-=a")
AddTest("EzMath.int.Vec3.-=Vec3") #.int.Vec3.-=Vec3")
AddTest("EzMath.int.Vec3.==a") #.int.Vec3.==a")
AddTest("EzMath.int.Vec3.==Vec3") #.int.Vec3.==Vec3")
AddTest("EzMath.int.Vec3.!=a") #.int.Vec3.!=a")
AddTest("EzMath.int.Vec3.!=Vec3") #.int.Vec3.!=Vec3")
AddTest("EzMath.int.Vec3.*=a") #.int.Vec3.*=a")
AddTest("EzMath.int.Vec3.*=Vec3") #.int.Vec3.*=Vec3")
AddTest("EzMath.int.Vec3./=a") #.int.Vec3./=a")
AddTest("EzMath.int.Vec3./=Vec3") #.int.Vec3./=Vec3")
AddTest("EzMath.int.Vec3.sum") #.int.Vec3.sum")
AddTest("EzMath.int.Vec3.sumAbs") #.int.Vec3.sumAbs")
AddTest("EzMath.int.Vec3.emptyAND") #.int.Vec3.emptyAND")
AddTest("EzMath.int.Vec3.emptyOR") #.int.Vec3.emptyOR")
AddTest("EzMath.int.Vec3.string") #.int.Vec3.string")
AddTest("EzMath.int.Vec3.mini") #.int.Vec3.mini")
AddTest("EzMath.int.Vec3.maxi") #.int.Vec3.maxi")

AddTest("EzMath.uint.Vec3.[]") #.uint.Vec3.[]")
AddTest("EzMath.uint.Vec3.Offset") #.uint.Vec3.Offset")
AddTest("EzMath.uint.Vec3.Set") #.uint.Vec3.Set")
AddTest("EzMath.uint.Vec3.xy") #.uint.Vec3.xy")
AddTest("EzMath.uint.Vec3.xz") #.uint.Vec3.xz")
AddTest("EzMath.uint.Vec3.yz") #.uint.Vec3.yz")
AddTest("EzMath.uint.Vec3.yzx") #.uint.Vec3.yzx")
AddTest("EzMath.uint.Vec3.post++") #.uint.Vec3.post++")
AddTest("EzMath.uint.Vec3.post--") #.uint.Vec3.post--")
AddTest("EzMath.uint.Vec3.pre++") #.uint.Vec3.pre++")
AddTest("EzMath.uint.Vec3.pre--") #.uint.Vec3.pre--")
AddTest("EzMath.uint.Vec3.+=a") #.uint.Vec3.+=a")
AddTest("EzMath.uint.Vec3.+=Vec3") #.uint.Vec3.+=Vec3")
AddTest("EzMath.uint.Vec3.-=a") #.uint.Vec3.-=a")
AddTest("EzMath.uint.Vec3.-=Vec3") #.uint.Vec3.-=Vec3")
AddTest("EzMath.uint.Vec3.==a") #.uint.Vec3.==a")
AddTest("EzMath.uint.Vec3.==Vec3") #.uint.Vec3.==Vec3")
AddTest("EzMath.uint.Vec3.!=a") #.uint.Vec3.!=a")
AddTest("EzMath.uint.Vec3.!=Vec3") #.uint.Vec3.!=Vec3")
AddTest("EzMath.uint.Vec3.*=a") #.uint.Vec3.*=a")
AddTest("EzMath.uint.Vec3.*=Vec3") #.uint.Vec3.*=Vec3")
AddTest("EzMath.uint.Vec3./=a") #.uint.Vec3./=a")
AddTest("EzMath.uint.Vec3./=Vec3") #.uint.Vec3./=Vec3")
AddTest("EzMath.uint.Vec3.sum") #.uint.Vec3.sum")
AddTest("EzMath.uint.Vec3.emptyAND") #.uint.Vec3.emptyAND")
AddTest("EzMath.uint.Vec3.emptyOR") #.uint.Vec3.emptyOR")
AddTest("EzMath.uint.Vec3.string") #.uint.Vec3.string")
AddTest("EzMath.uint.Vec3.mini") #.uint.Vec3.mini")
AddTest("EzMath.uint.Vec3.maxi") #.uint.Vec3.maxi")

### TESTS for EzMath.Vec4

AddTest("EzMath.double.Vec4.[]") #.double.Vec4.[]")
AddTest("EzMath.double.Vec4.Offset") #.double.Vec4.Offset")
AddTest("EzMath.double.Vec4.Set") #.double.Vec4.Set")
AddTest("EzMath.double.Vec4.-") #.double.Vec4.-")
AddTest("EzMath.double.Vec4.xy") #.double.Vec4.xy")
AddTest("EzMath.double.Vec4.zw") #.double.Vec4.zw")
AddTest("EzMath.double.Vec4.post++") #.double.Vec4.post++")
AddTest("EzMath.double.Vec4.post--") #.double.Vec4.post--")
AddTest("EzMath.double.Vec4.pre++") #.double.Vec4.pre++")
AddTest("EzMath.double.Vec4.pre--") #.double.Vec4.pre--")
AddTest("EzMath.double.Vec4.+=a") #.double.Vec4.+=a")
AddTest("EzMath.double.Vec4.+=Vec4") #.double.Vec4.+=Vec4")
AddTest("EzMath.double.Vec4.-=a") #.double.Vec4.-=a")
AddTest("EzMath.double.Vec4.-=Vec4") #.double.Vec4.-=Vec4")
AddTest("EzMath.double.Vec4.==a") #.double.Vec4.==a")
AddTest("EzMath.double.Vec4.==Vec4") #.double.Vec4.==Vec4")
AddTest("EzMath.double.Vec4.!=a") #.double.Vec4.!=a")
AddTest("EzMath.double.Vec4.!=Vec4") #.double.Vec4.!=Vec4")
AddTest("EzMath.double.Vec4.*=a") #.double.Vec4.*=a")
AddTest("EzMath.double.Vec4.*=Vec4") #.double.Vec4.*=Vec4")
AddTest("EzMath.double.Vec4./=a") #.double.Vec4./=a")
AddTest("EzMath.double.Vec4./=Vec4") #.double.Vec4./=Vec4")
AddTest("EzMath.double.Vec4.SizeLBRT") #.double.Vec4.SizeLBRT")
AddTest("EzMath.double.Vec4.pos") #.double.Vec4.pos")
AddTest("EzMath.double.Vec4.size") #.double.Vec4.size")
AddTest("EzMath.double.Vec4.lengthSquared") #.double.Vec4.lengthSquared")
AddTest("EzMath.double.Vec4.length") #.double.Vec4.length")
AddTest("EzMath.double.Vec4.normalize") #.double.Vec4.normalize")
AddTest("EzMath.double.Vec4.GetNormalized") #.double.Vec4.GetNormalized")
AddTest("EzMath.double.Vec4.sum") #.double.Vec4.sum")
AddTest("EzMath.double.Vec4.sumAbs") #.double.Vec4.sumAbs")
AddTest("EzMath.double.Vec4.emptyAND") #.double.Vec4.emptyAND")
AddTest("EzMath.double.Vec4.emptyOR") #.double.Vec4.emptyOR")
AddTest("EzMath.double.Vec4.string") #.double.Vec4.string")
AddTest("EzMath.double.Vec4.mini") #.double.Vec4.mini")
AddTest("EzMath.double.Vec4.maxi") #.double.Vec4.maxi")

AddTest("EzMath.float.Vec4.[]") #.float.Vec4.[]")
AddTest("EzMath.float.Vec4.Offset") #.float.Vec4.Offset")
AddTest("EzMath.float.Vec4.Set") #.float.Vec4.Set")
AddTest("EzMath.float.Vec4.-") #.float.Vec4.-")
AddTest("EzMath.float.Vec4.xy") #.float.Vec4.xy")
AddTest("EzMath.float.Vec4.zw") #.float.Vec4.zw")
AddTest("EzMath.float.Vec4.post++") #.float.Vec4.post++")
AddTest("EzMath.float.Vec4.post--") #.float.Vec4.post--")
AddTest("EzMath.float.Vec4.pre++") #.float.Vec4.pre++")
AddTest("EzMath.float.Vec4.pre--") #.float.Vec4.pre--")
AddTest("EzMath.float.Vec4.+=a") #.float.Vec4.+=a")
AddTest("EzMath.float.Vec4.+=Vec4") #.float.Vec4.+=Vec4")
AddTest("EzMath.float.Vec4.-=a") #.float.Vec4.-=a")
AddTest("EzMath.float.Vec4.-=Vec4") #.float.Vec4.-=Vec4")
AddTest("EzMath.float.Vec4.==a") #.float.Vec4.==a")
AddTest("EzMath.float.Vec4.==Vec4") #.float.Vec4.==Vec4")
AddTest("EzMath.float.Vec4.!=a") #.float.Vec4.!=a")
AddTest("EzMath.float.Vec4.!=Vec4") #.float.Vec4.!=Vec4")
AddTest("EzMath.float.Vec4.*=a") #.float.Vec4.*=a")
AddTest("EzMath.float.Vec4.*=Vec4") #.float.Vec4.*=Vec4")
AddTest("EzMath.float.Vec4./=a") #.float.Vec4./=a")
AddTest("EzMath.float.Vec4./=Vec4") #.float.Vec4./=Vec4")
AddTest("EzMath.float.Vec4.SizeLBRT") #.float.Vec4.SizeLBRT")
AddTest("EzMath.float.Vec4.pos") #.float.Vec4.pos")
AddTest("EzMath.float.Vec4.size") #.float.Vec4.size")
AddTest("EzMath.float.Vec4.lengthSquared") #.float.Vec4.lengthSquared")
AddTest("EzMath.float.Vec4.length") #.float.Vec4.length")
AddTest("EzMath.float.Vec4.normalize") #.float.Vec4.normalize")
AddTest("EzMath.float.Vec4.GetNormalized") #.float.Vec4.GetNormalized")
AddTest("EzMath.float.Vec4.sum") #.float.Vec4.sum")
AddTest("EzMath.float.Vec4.sumAbs") #.float.Vec4.sumAbs")
AddTest("EzMath.float.Vec4.emptyAND") #.float.Vec4.emptyAND")
AddTest("EzMath.float.Vec4.emptyOR") #.float.Vec4.emptyOR")
AddTest("EzMath.float.Vec4.string") #.float.Vec4.string")
AddTest("EzMath.float.Vec4.mini") #.float.Vec4.mini")
AddTest("EzMath.float.Vec4.maxi") #.float.Vec4.maxi")

AddTest("EzMath.bool.Vec4.[]") #.bool.Vec4.[]")
AddTest("EzMath.bool.Vec4.Set") #.bool.Vec4.Set")
AddTest("EzMath.bool.Vec4.!") #.bool.Vec4.!")
AddTest("EzMath.bool.Vec4.xy") #.bool.Vec4.xy")
AddTest("EzMath.bool.Vec4.zw") #.bool.Vec4.zw")
AddTest("EzMath.bool.Vec4.==a") #.bool.Vec4.==a")
AddTest("EzMath.bool.Vec4.==Vec4") #.bool.Vec4.==Vec4")
AddTest("EzMath.bool.Vec4.!=a") #.bool.Vec4.!=a")
AddTest("EzMath.bool.Vec4.!=Vec4") #.bool.Vec4.!=Vec4")
AddTest("EzMath.bool.Vec4.emptyAND") #.bool.Vec4.emptyAND")
AddTest("EzMath.bool.Vec4.emptyOR") #.bool.Vec4.emptyOR")
AddTest("EzMath.bool.Vec4.string") #.bool.Vec4.string")
AddTest("EzMath.bool.Vec4.mini") #.bool.Vec4.mini")
AddTest("EzMath.bool.Vec4.maxi") #.bool.Vec4.maxi")

AddTest("EzMath.int.Vec4.[]") #.int.Vec4.[]")
AddTest("EzMath.int.Vec4.Offset") #.int.Vec4.Offset")
AddTest("EzMath.int.Vec4.Set") #.int.Vec4.Set")
AddTest("EzMath.int.Vec4.-") #.int.Vec4.-")
AddTest("EzMath.int.Vec4.xy") #.int.Vec4.xy")
AddTest("EzMath.int.Vec4.zw") #.int.Vec4.zw")
AddTest("EzMath.int.Vec4.post++") #.int.Vec4.post++")
AddTest("EzMath.int.Vec4.post--") #.int.Vec4.post--")
AddTest("EzMath.int.Vec4.pre++") #.int.Vec4.pre++")
AddTest("EzMath.int.Vec4.pre--") #.int.Vec4.pre--")
AddTest("EzMath.int.Vec4.+=a") #.int.Vec4.+=a")
AddTest("EzMath.int.Vec4.+=Vec4") #.int.Vec4.+=Vec4")
AddTest("EzMath.int.Vec4.-=a") #.int.Vec4.-=a")
AddTest("EzMath.int.Vec4.-=Vec4") #.int.Vec4.-=Vec4")
AddTest("EzMath.int.Vec4.==a") #.int.Vec4.==a")
AddTest("EzMath.int.Vec4.==Vec4") #.int.Vec4.==Vec4")
AddTest("EzMath.int.Vec4.!=a") #.int.Vec4.!=a")
AddTest("EzMath.int.Vec4.!=Vec4") #.int.Vec4.!=Vec4")
AddTest("EzMath.int.Vec4.*=a") #.int.Vec4.*=a")
AddTest("EzMath.int.Vec4.*=Vec4") #.int.Vec4.*=Vec4")
AddTest("EzMath.int.Vec4./=a") #.int.Vec4./=a")
AddTest("EzMath.int.Vec4./=Vec4") #.int.Vec4./=Vec4")
AddTest("EzMath.int.Vec4.SizeLBRT") #.int.Vec4.SizeLBRT")
AddTest("EzMath.int.Vec4.pos") #.int.Vec4.pos")
AddTest("EzMath.int.Vec4.size") #.int.Vec4.size")
AddTest("EzMath.int.Vec4.sum") #.int.Vec4.sum")
AddTest("EzMath.int.Vec4.sumAbs") #.int.Vec4.sumAbs")
AddTest("EzMath.int.Vec4.emptyAND") #.int.Vec4.emptyAND")
AddTest("EzMath.int.Vec4.emptyOR") #.int.Vec4.emptyOR")
AddTest("EzMath.int.Vec4.string") #.int.Vec4.string")
AddTest("EzMath.int.Vec4.mini") #.int.Vec4.mini")
AddTest("EzMath.int.Vec4.maxi") #.int.Vec4.maxi")

AddTest("EzMath.uint.Vec4.[]") #.uint.Vec4.[]")
AddTest("EzMath.uint.Vec4.Offset") #.uint.Vec4.Offset")
AddTest("EzMath.uint.Vec4.Set") #.uint.Vec4.Set")
AddTest("EzMath.uint.Vec4.xy") #.uint.Vec4.xy")
AddTest("EzMath.uint.Vec4.zw") #.uint.Vec4.zw")
AddTest("EzMath.uint.Vec4.post++") #.uint.Vec4.post++")
AddTest("EzMath.uint.Vec4.post--") #.uint.Vec4.post--")
AddTest("EzMath.uint.Vec4.pre++") #.uint.Vec4.pre++")
AddTest("EzMath.uint.Vec4.pre--") #.uint.Vec4.pre--")
AddTest("EzMath.uint.Vec4.+=a") #.uint.Vec4.+=a")
AddTest("EzMath.uint.Vec4.+=Vec4") #.uint.Vec4.+=Vec4")
AddTest("EzMath.uint.Vec4.-=a") #.uint.Vec4.-=a")
AddTest("EzMath.uint.Vec4.-=Vec4") #.uint.Vec4.-=Vec4")
AddTest("EzMath.uint.Vec4.==a") #.uint.Vec4.==a")
AddTest("EzMath.uint.Vec4.==Vec4") #.uint.Vec4.==Vec4")
AddTest("EzMath.uint.Vec4.!=a") #.uint.Vec4.!=a")
AddTest("EzMath.uint.Vec4.!=Vec4") #.uint.Vec4.!=Vec4")
AddTest("EzMath.uint.Vec4.*=a") #.uint.Vec4.*=a")
AddTest("EzMath.uint.Vec4.*=Vec4") #.uint.Vec4.*=Vec4")
AddTest("EzMath.uint.Vec4./=a") #.uint.Vec4./=a")
AddTest("EzMath.uint.Vec4./=Vec4") #.uint.Vec4./=Vec4")
AddTest("EzMath.uint.Vec4.SizeLBRT") #.uint.Vec4.SizeLBRT")
AddTest("EzMath.uint.Vec4.pos") #.uint.Vec4.pos")
AddTest("EzMath.uint.Vec4.size") #.uint.Vec4.size")
AddTest("EzMath.uint.Vec4.sum") #.uint.Vec4.sum")
AddTest("EzMath.uint.Vec4.emptyAND") #.uint.Vec4.emptyAND")
AddTest("EzMath.uint.Vec4.emptyOR") #.uint.Vec4.emptyOR")
AddTest("EzMath.uint.Vec4.string") #.uint.Vec4.string")
AddTest("EzMath.uint.Vec4.mini") #.uint.Vec4.mini")
AddTest("EzMath.uint.Vec4.maxi") #.uint.Vec4.maxi")

### TESTS for EzMath.Plane

AddTest("EzMath.double.Plane.construtor.point")
AddTest("EzMath.double.Plane.construtor.point_and_normal")
AddTest("EzMath.double.Plane.construtor.3_points")
AddTest("EzMath.double.Plane.get_plane_intersection")
AddTest("EzMath.double.Plane.is_on_plane")

AddTest("EzMath.float.Plane.construtor.point")
AddTest("EzMath.float.Plane.construtor.point_and_normal")
AddTest("EzMath.float.Plane.construtor.3_points")
AddTest("EzMath.float.Plane.get_plane_intersection")
AddTest("EzMath.float.Plane.is_on_plane")

### TESTS for EzMath.EncodeID

AddTest("EzMath.EncodeID")
