cmake_minimum_required(VERSION 3.1)

set(PROJECT TestEzExpr)
enable_language(C CXX)
project(${PROJECT} CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_definitions(-DPROJECT_PATH="${CMAKE_SOURCE_DIR}/bin")

if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Z")
endif ()

file(GLOB_RECURSE PROJECT_TEST_SRC_RECURSE 
	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp 
	${CMAKE_CURRENT_SOURCE_DIR}/*.h 
)
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${PROJECT_TEST_SRC_RECURSE})

add_executable(${PROJECT} ${PROJECT_TEST_SRC_RECURSE})

set_target_properties(${PROJECT} PROPERTIES FOLDER Tests)

#############################################################
#############################################################
#############################################################

target_include_directories(${PROJECT} PRIVATE 
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/..
	${CMAKE_CURRENT_SOURCE_DIR}/../EzTools
)

function(SetTest arg)
	add_test("${arg}" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "${arg}")
endfunction()

##########################################################
## PARSING ###############################################
##########################################################

SetTest(TestEzExpr_Parsing_OperatorWithoutOperands)
SetTest(TestEzExpr_Parsing_UnaryOperatorWithoutOperand)
SetTest(TestEzExpr_Parsing_UnmatchedOpeningParenthesis)
SetTest(TestEzExpr_Parsing_UnmatchedClosingParenthesis)
SetTest(TestEzExpr_Parsing_DoubleBinaryOperator)
SetTest(TestEzExpr_Parsing_DoubleUnaryOperator)
SetTest(TestEzExpr_Parsing_UndefinedVariable)
SetTest(TestEzExpr_Parsing_BinaryOperatorWithoutRightOperand)
SetTest(TestEzExpr_Parsing_DoubleOperandWithoutOperator)
SetTest(TestEzExpr_Parsing_FunctionWithoutParentheses)
SetTest(TestEzExpr_Parsing_FunctionWithoutArguments)
SetTest(TestEzExpr_Parsing_FunctionWithTooManyArguments)
SetTest(TestEzExpr_Parsing_FunctionWithOneArgumentInsteadOfTwo)
SetTest(TestEzExpr_Parsing_DivisionByZero)
SetTest(TestEzExpr_Parsing_MisplacedComma)
SetTest(TestEzExpr_Parsing_UndefinedOperator)
SetTest(TestEzExpr_Parsing_MisuseOfFactorialOperator)
SetTest(TestEzExpr_Parsing_UnaryOperatorBeforeParenthesis)
SetTest(TestEzExpr_Parsing_EmptyParenthesis)
SetTest(TestEzExpr_Parsing_DoubleComma)
SetTest(TestEzExpr_Parsing_DoubleBinaryOperatorAtStart)
SetTest(TestEzExpr_Parsing_DoubleBinaryOperatorAtEnd)
SetTest(TestEzExpr_Parsing_EmptyExpression)
SetTest(TestEzExpr_Parsing_UnknownFunctionName)
SetTest(TestEzExpr_Parsing_MissingParenthesisInComplexExpression)
SetTest(TestEzExpr_Parsing_OperatorWithoutOperandsInParenthesis)
SetTest(TestEzExpr_Parsing_NumberFollowedByVariable)
SetTest(TestEzExpr_Parsing_IncorrectUseOfComma)
SetTest(TestEzExpr_Parsing_UnrecognizedCharacter)
SetTest(TestEzExpr_Parsing_OperatorAtEndOfParenthesis)
SetTest(TestEzExpr_Parsing_NumberFollowedByParenthesisWithoutOperator)
SetTest(TestEzExpr_Parsing_VariableFollowedByExpressionWithoutOperator)
SetTest(TestEzExpr_Parsing_MisplacedCommaAfterFunction)
SetTest(TestEzExpr_Parsing_BinaryOperatorMisplacedInFunction)
SetTest(TestEzExpr_Parsing_IncompleteExpression)
SetTest(TestEzExpr_Parsing_MisuseOfFactorialOperator_2)
SetTest(TestEzExpr_Parsing_NumberFollowedByBinaryOperator)
SetTest(TestEzExpr_Parsing_IncorrectUseOfOpeningParenthesis)
SetTest(TestEzExpr_Parsing_IncorrectVariableName)
SetTest(TestEzExpr_Parsing_IncorrectUseOfMultipleOperators)

##########################################################
## CONSTANTS #############################################
##########################################################

SetTest(TestEzExpr_Constant_Parsing_PI)
SetTest(TestEzExpr_Constant_Parsing_E)

##########################################################
## BUILTINS ##############################################
##########################################################

SetTest(TestEzExpr_Builtin_Floor_1)
SetTest(TestEzExpr_Builtin_Floor_2)
SetTest(TestEzExpr_Builtin_Floor_3)
SetTest(TestEzExpr_Builtin_Ceil_1)
SetTest(TestEzExpr_Builtin_Ceil_2)
SetTest(TestEzExpr_Builtin_Ceil_3)
SetTest(TestEzExpr_Builtin_Round_1)
SetTest(TestEzExpr_Builtin_Round_2)
SetTest(TestEzExpr_Builtin_Round_3)
SetTest(TestEzExpr_Builtin_Fract_1)
SetTest(TestEzExpr_Builtin_Fract_2)
SetTest(TestEzExpr_Builtin_Fract_3)
SetTest(TestEzExpr_Builtin_Sign_1)
SetTest(TestEzExpr_Builtin_Sign_2)
SetTest(TestEzExpr_Builtin_Sign_3)
SetTest(TestEzExpr_Builtin_Step_1)
SetTest(TestEzExpr_Builtin_Step_2)
SetTest(TestEzExpr_Builtin_Step_3)
SetTest(TestEzExpr_Builtin_Hypot_1)
SetTest(TestEzExpr_Builtin_Hypot_2)
SetTest(TestEzExpr_Builtin_Hypot_3)
SetTest(TestEzExpr_Builtin_Clamp_1)
SetTest(TestEzExpr_Builtin_Clamp_2)
SetTest(TestEzExpr_Builtin_Clamp_3)
SetTest(TestEzExpr_Builtin_Saturate_1)
SetTest(TestEzExpr_Builtin_Saturate_2)
SetTest(TestEzExpr_Builtin_Saturate_3)
SetTest(TestEzExpr_Builtin_Lerp_1)
SetTest(TestEzExpr_Builtin_Lerp_2)
SetTest(TestEzExpr_Builtin_Lerp_3)
SetTest(TestEzExpr_Builtin_Mix_1)
SetTest(TestEzExpr_Builtin_Mix_2)
SetTest(TestEzExpr_Builtin_Mix_3)
SetTest(TestEzExpr_Builtin_SmoothStep_1)
SetTest(TestEzExpr_Builtin_SmoothStep_2)
SetTest(TestEzExpr_Builtin_SmoothStep_3)
SetTest(TestEzExpr_Builtin_SmoothAbs_1)
SetTest(TestEzExpr_Builtin_SmoothAbs_2)
SetTest(TestEzExpr_Builtin_SmoothAbs_3)
SetTest(TestEzExpr_Builtin_Abs_1)
SetTest(TestEzExpr_Builtin_Abs_2)
SetTest(TestEzExpr_Builtin_Abs_3)
SetTest(TestEzExpr_Builtin_Sin_1)
SetTest(TestEzExpr_Builtin_Sin_2)
SetTest(TestEzExpr_Builtin_Sin_3)
SetTest(TestEzExpr_Builtin_Cos_1)
SetTest(TestEzExpr_Builtin_Cos_2)
SetTest(TestEzExpr_Builtin_Cos_3)
SetTest(TestEzExpr_Builtin_Tan_1)
SetTest(TestEzExpr_Builtin_Tan_2)
SetTest(TestEzExpr_Builtin_Tan_3)
SetTest(TestEzExpr_Builtin_Asin_1)
SetTest(TestEzExpr_Builtin_Asin_2)
SetTest(TestEzExpr_Builtin_Asin_3)
SetTest(TestEzExpr_Builtin_Acos_1)
SetTest(TestEzExpr_Builtin_Acos_2)
SetTest(TestEzExpr_Builtin_Acos_3)
SetTest(TestEzExpr_Builtin_Atan_1)
SetTest(TestEzExpr_Builtin_Atan_2)
SetTest(TestEzExpr_Builtin_Atan_3)
SetTest(TestEzExpr_Builtin_Sinh_1)
SetTest(TestEzExpr_Builtin_Sinh_2)
SetTest(TestEzExpr_Builtin_Sinh_3)
SetTest(TestEzExpr_Builtin_Cosh_1)
SetTest(TestEzExpr_Builtin_Cosh_2)
SetTest(TestEzExpr_Builtin_Cosh_3)
SetTest(TestEzExpr_Builtin_Tanh_1)
SetTest(TestEzExpr_Builtin_Tanh_2)
SetTest(TestEzExpr_Builtin_Tanh_3)
SetTest(TestEzExpr_Builtin_Asinh_1)
SetTest(TestEzExpr_Builtin_Asinh_2)
SetTest(TestEzExpr_Builtin_Asinh_3)
SetTest(TestEzExpr_Builtin_Acosh_1)
SetTest(TestEzExpr_Builtin_Acosh_2)
SetTest(TestEzExpr_Builtin_Acosh_3)
SetTest(TestEzExpr_Builtin_Atanh_1)
SetTest(TestEzExpr_Builtin_Atanh_2)
SetTest(TestEzExpr_Builtin_Atanh_3)
SetTest(TestEzExpr_Builtin_Ln_1)
SetTest(TestEzExpr_Builtin_Ln_2)
SetTest(TestEzExpr_Builtin_Ln_3)
SetTest(TestEzExpr_Builtin_Log_1)
SetTest(TestEzExpr_Builtin_Log_2)
SetTest(TestEzExpr_Builtin_Log_3)
SetTest(TestEzExpr_Builtin_Log1p_1)
SetTest(TestEzExpr_Builtin_Log1p_2)
SetTest(TestEzExpr_Builtin_Log1p_3)
SetTest(TestEzExpr_Builtin_Log2_1)
SetTest(TestEzExpr_Builtin_Log2_2)
SetTest(TestEzExpr_Builtin_Log2_3)
SetTest(TestEzExpr_Builtin_Log10_1)
SetTest(TestEzExpr_Builtin_Log10_2)
SetTest(TestEzExpr_Builtin_Log10_3)
SetTest(TestEzExpr_Builtin_Exp_1)
SetTest(TestEzExpr_Builtin_Exp_2)
SetTest(TestEzExpr_Builtin_Exp_3)
SetTest(TestEzExpr_Builtin_Sqrt_1)
SetTest(TestEzExpr_Builtin_Sqrt_2)
SetTest(TestEzExpr_Builtin_Sqrt_3)
SetTest(TestEzExpr_Builtin_Mod_1)
SetTest(TestEzExpr_Builtin_Mod_2)
SetTest(TestEzExpr_Builtin_Mod_3)
SetTest(TestEzExpr_Builtin_Atan2_1)
SetTest(TestEzExpr_Builtin_Atan2_2)
SetTest(TestEzExpr_Builtin_Atan2_3)
SetTest(TestEzExpr_Builtin_Min_1)
SetTest(TestEzExpr_Builtin_Min_2)
SetTest(TestEzExpr_Builtin_Min_3)
SetTest(TestEzExpr_Builtin_Max_1)
SetTest(TestEzExpr_Builtin_Max_2)
SetTest(TestEzExpr_Builtin_Max_3)
SetTest(TestEzExpr_Builtin_Factorial_1)
SetTest(TestEzExpr_Builtin_Factorial_2)
SetTest(TestEzExpr_Builtin_Factorial_3)
SetTest(TestEzExpr_Builtin_ModuloPercent_1)
SetTest(TestEzExpr_Builtin_ModuloPercent_2)
SetTest(TestEzExpr_Builtin_ModuloPercent_3)
SetTest(TestEzExpr_Builtin_ModuloMod_1)
SetTest(TestEzExpr_Builtin_ModuloMod_2)
SetTest(TestEzExpr_Builtin_ModuloMod_3)

##########################################################
## ERROR CODES ###########################################
##########################################################

SetTest(TestEzExpr_Exception_DivisionByZero)
SetTest(TestEzExpr_Exception_DivisionByZero_Float)
SetTest(TestEzExpr_Exception_ModuloByZero)
SetTest(TestEzExpr_Exception_UnmatchedParenthesis_Open)
SetTest(TestEzExpr_Exception_UnmatchedParenthesis_Close)
SetTest(TestEzExpr_Exception_VariableNotFound)
SetTest(TestEzExpr_Exception_VariableNotFound_Multiple)
SetTest(TestEzExpr_Exception_FunctionNotFound)
SetTest(TestEzExpr_Exception_FunctionWrongArgs)
SetTest(TestEzExpr_Exception_EvaluationNaN_1)
SetTest(TestEzExpr_Exception_EvaluationNaN_2)
SetTest(TestEzExpr_Exception_EvaluationNaN_Log)
SetTest(TestEzExpr_Exception_EvaluationNaN_DivZeroZero)
SetTest(TestEzExpr_Exception_EvaluationInf)
SetTest(TestEzExpr_Exception_EvaluationInf_Exp)
SetTest(TestEzExpr_Exception_EvaluationInf_Power)

##########################################################
## PERFOS ################################################
##########################################################

SetTest(TestEzExpr_Perfo_All)
SetTest(TestEzExpr_Perfo_x_squared)
SetTest(TestEzExpr_Perfo_x_cubed)
SetTest(TestEzExpr_Perfo_sin_x)
SetTest(TestEzExpr_Perfo_sqrt_x)
SetTest(TestEzExpr_Perfo_cos_x_sin_y)
SetTest(TestEzExpr_Perfo_a_plus_5)
SetTest(TestEzExpr_Perfo_5_plus_a_plus_5)
SetTest(TestEzExpr_Perfo_abs_a_plus_5)
SetTest(TestEzExpr_Perfo_a_plus_5_times_2)
SetTest(TestEzExpr_Perfo_a_plus_5_times_2_alt)
SetTest(TestEzExpr_Perfo_sqrt_pow_a)
SetTest(TestEzExpr_Perfo_complex_fraction)
